@@ -104,7 +104,7 @@ SDCC Compiler User Guide
 \begin_layout Date
 
 \size normal
-SDCC 2.8.1
+SDCC 2.8.2
 \size footnotesize
 
 \newline
